Updating class name of a shadow host does not update the style applied by :host() https://bugs.webkit.org/show_bug.cgi?id=158900 <rdar://problem/26883707>

Reviewed by Simon Fraser.

Source/WebCore:

Test: fast/shadow-dom/shadow-host-style-update.html

Teach style invalidation optimization code about :host.

* style/AttributeChangeInvalidation.cpp:
(WebCore::Style::mayBeAffectedByHostStyle):
(WebCore::Style::AttributeChangeInvalidation::invalidateStyle):
* style/ClassChangeInvalidation.cpp:
(WebCore::Style::computeClassChange):
(WebCore::Style::mayBeAffectedByHostStyle):
(WebCore::Style::ClassChangeInvalidation::invalidateStyle):
* style/IdChangeInvalidation.cpp:
(WebCore::Style::mayBeAffectedByHostStyle):
(WebCore::Style::IdChangeInvalidation::invalidateStyle):

LayoutTests:

* fast/shadow-dom/shadow-host-style-update-expected.html: Added.
* fast/shadow-dom/shadow-host-style-update.html: Added.



Canonical link: https://commits.webkit.org/177001@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202227 268f45cc-cd09-0410-ab3c-d52691b4dbfc